src/styles/style.css
/* ... */
/********* FRESHDESK *********/
.toggl-button.freshdesk {
  margin-top: 3px;
}
.toggl-button.freshdesk__mint {
  margin-top: 14px;
  margin-left: 5px;
}
/********* CLOUDES.ME *********/
.boxedDotted .toggl-button.cloudes {
  margin-left: 7px;
  color: #fff;
  text-decoration: none;
  font-weight: bold;
}
/********* DOIT *********/
.title > .toggl-button.doit {
  position: absolute;
  top: 10px;
}

.title > .ng-hide + .toggl-button.doit {
  margin-left: 5px;
}

.task-op > .toggl-button.doit {
  color: #222;
  font-size: 14px;
  display: inline-block;
  height: 24px;
  line-height: 24px;
  text-align: center;
  border: 1px solid #d6d6d6;
  padding: 0 12px;
  text-decoration: none;
  box-shadow: 0 1px 0 #d6d6d6;
  -ms-border-radius: 2px;
  -o-border-radius: 2px;
  border-radius: 2px;
  padding: 0 10px 0 35px;
  background-position: 10px 2px !important;
}

/********* SLACK *********/
.toggl-button.slack {
  background-color: #fff !important;
  height: 45px;
  z-index: 9;
  width: 40px;
  background-position-y: 10px !important;
  background-position-x: 8px !important;
}

.toggl-button.slack-message {
  background-color: #fff !important;
  background-size: 16px !important;
  padding-left: 1px;
  width: 16px;
  height: 16px;
}

/********* ZOHO BOOKS *********/
.toggl-button.zoho_books {
  margin-top: 5px;
  margin-left: 4px;
}
/********* KEEP *********/
.toggl-button.keep {
  margin-top: 6px;
}

.notes-container .CmABtb.RNfche .toggl-button.keep {
  display: none !important;
}

.IZ65Hb-MPu53c-haAclf .toggl-button.keep {
  margin-left: 24px;
  margin-top: 5px;
}

.IZ65Hb-YPqjbf.CmABtb-YPqjbf {
  padding-left: 73px;
}

/********* GOOGLE INBOX *********/
.toggl-button.google-inbox {
  margin-top: 5px;
  position: absolute;
  margin-left: -15px;
}

/********* WORDPRESS *********/
.toggl-button.wordpress {
  float: left;
  margin-left: 10px;
}

/********* PLANBOX *********/
.toggl-button.planbox {
  color: black;
  font-family: Open Sans, Helvetica Neue, Helvetica, Arial, sans-serif;
  font-size: 12px;
  margin-left: -5px;
}

/********* EPROJECT *********/
.toggl-timer {
  margin-left: 5px !important;
}

/********* EVERNOTE *********/
.toggl-wrapper.evernote {
  display: inline-block;
  margin-top: 5px;
  min-width: 100px;
}

.toggl-button.evernote {
  font-family: gotham, helvetica, arial, sans-serif !important;
  font-size: 13px !important;
}

.toggl-button.evernote-2018 {
  margin: 0 5px 0 10px;
}

/********* OPENPROJECT *********/
.work-packages--show-view .toggl-button.openproject {
  margin-bottom: 0.4rem;
}

table.work-package-table .wp-table--cell-td.id {
  position: relative;
  padding-right: 14px;
}

table.work-package-table .toggl-button.openproject {
  position: absolute;
  right: 0px;
  top: 10px;
}

/********* ZUBE *********/
#card-primary-attributes-container .toggl-button.zube {
  margin-left: 30px;
  vertical-align: middle;
}

/********* HABITICA *********/
.toggl-button.habitica {
  transform: scale(0.85);
}

/********* SHERPADESK *********/
.toggl-button.sherpadesk {
  line-height: 20px;
  vertical-align: middle;
}

/********* WORKFRONT *********/
.toggl-button.workfront {
  height: 62px;
  line-height: 62px;
  background-position: 1em 50%;
  padding: 0 1em 0 2.75em;
}

.toggl-button.workfront:hover {
  background-color: #eee !important;
}

.toggl-button.workfront.active {
  background-color: #f5f5f5;
}

a.toggl-button.workfront.min {
  width: 19px;
  height: 19px;
  float: left;
  padding: 0px;
  margin: 0 3px 0 0;
  vertical-align: bottom;
  background-position: 0 0;
}

/********* ONLYOFFICE *********/
.toggl-button.onlyoffice {
  margin-top: 4px;
}

/********* ONSHAPE *********/
.toggl-button.onshape {
  margin: 10px;
}

/********* OVERV.IO *********/
.toggl-button.overv-io {
  margin-left: 10px;
  position: absolute;
  margin-top: 13px;
}

/********* TARGETPROCESS *********/
.tau-list-line .toggl-button.targetprocess {
  top: 5px;
  position: relative;
}

.tau-list-line .tau-board-unit_type_entity-name .toggl-button.targetprocess {
  top: 0;
  margin-right: 5px;
}

/********* CLUBHOUSE *********/
.toggl-button.clubhouse {
  margin-left: 3px;
  padding-left: 27px;
}

/********* TEAMLEADER *********/
.toggl-button.teamleader {
  background: none;
}

/********* INTERCOM *********/
.toggl-button.intercom {
  color: #a7bfcb;
  float: right;
  font-weight: 700;
  margin-top: 6px;
  margin-right: 5px;
  text-decoration: none;
}

.toggl-button.intercom:hover {
  color: #546e7a;
}

/********* PROCESSWIRE *********/
.toggl-button.processwire {
  opacity: 0.3;
}

.toggl-button.processwire:hover {
  opacity: 0.65;
}
.toggl-button.processwire.active {
  opacity: 1;
}

.PageListItem .toggl-button.processwire {
  position: absolute;
  left: 0;
  top: 0.4em;
  background-size: 1.2em !important;
  background-position: center !important;
}

.PageListItem {
  position: relative;
  padding-left: 1.5em;
}

.ProcessPageEdit h1 .toggl-button.processwire {
  margin-left: 1em;
}

/********* KHAN ACADEMY *********/
.toggl-button.khanacademy {
  position: absolute;
  right: 5px;
  bottom: 20px;
}
#toggl-button-edit-form .toggl-button.khanacademy {
  position: static;
}

/********* NOZBE *********/
.details__attribute.togglContainer {
  margin-top: 3px !important;
  height: 37px;
}
.toggl-button.nozbe {
  height: 100%;
  line-height: 25px;
  padding-left: 29px;
  background-size: 24px 24px;
  color: #151515 !important;
}

/********* RallyDev *********/
.timer__container.togglContainer {
  display: inline;
  margin-left: 20px;
}
.toggl-button.rallydev {
  height: 100%;
  line-height: 25px;
  padding-left: 29px;
  background-size: 24px 24px;
  color: #151515 !important;
}

/********* CODEBASE *********/
.merge-request-summary__title .toggl-button {
  margin-left: 20px;
}
.sidebar__module .toggl-button {
  margin-bottom: 5px;
}

/********* SPIDERGAP *********/
.nav-tabs .toggl-button {
  margin: 5px 0 0 60px;
}

/********* Pagerduty *********/
.toggl-button.pagerduty {
  margin-left: 9px;
}
/* ... */

